[package]
name = "db-server"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "db-server"            
path = "src/main.rs"   

[dependencies]
anyhow = "1.0.97"
tokio = { version = "1.44.2", features = ["full"] }
chrono = { version = "0.4", features = ["serde", "clock"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bcrypt = "0.15.0"